--- a/src/app/docente/perfilprofesor/perfilprofesor.component.html
+++ b/src/app/docente/perfilprofesor/perfilprofesor.component.html
@@ -129,25 +129,6 @@
                         <!-- Sidenav Heading (Custom)-->
                         <div class="sidenav-menu-heading">Gestión de grupos</div>
                         <!-- Sidenav Accordion (Pages)-->
-                        <a class="nav-link" href="charts.html">
-                            <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
-                                    <line x1="12" y1="20" x2="12" y2="10"></line>
-                                    <line x1="18" y1="20" x2="18" y2="4"></line>
-                                    <line x1="6" y1="20" x2="6" y2="16"></line>
-                                </svg></div>
-                            Crear grupos
-                            <div class="sidenav-collapse-arrow"><svg class="svg-inline--fa fa-angle-down"
-                                    aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-down"
-                                    role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
-                                    data-fa-i2svg="">
-                                    <path fill="currentColor"
-                                        d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z">
-                                    </path>
-                                </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
-                        </a>
-                        <!-- Sidenav Accordion (Pages)-->
                         <a class="nav-link" href="/listaG">
                             <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -166,7 +147,7 @@
                                     </path>
                                 </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/listaE">
                             <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
