--- a/src/app/docente/listausuario/listausuario.component.html
+++ b/src/app/docente/listausuario/listausuario.component.html
@@ -260,70 +260,38 @@
                 <div class="container-fluid px-4">
                     <div class="card">
                         <div class="card-body">
-                            <table id="datatablesSimple">
+                            <table id="estudiantelist" class="table table-striped" style="width:100%">
                                 <thead>
                                     <tr>
-                                        <th>User</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Groups</th>
-                                        <th>Joined Date</th>
-                                        <th>Actions</th>
+                                        <th class="text-center">Estudiante</th>
+                                        <th class="text-center">Correo</th>
+                                        <th class="text-center">Rol</th>
+                                        <th class="text-center">Grupos</th>
+                                        <th>Opciones</th>
                                     </tr>
                                 </thead>
-                                <tfoot>
-                                    <tr>
-                                        <th>User</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Groups</th>
-                                        <th>Joined Date</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </tfoot>
                                 <tbody>
-                                    <tr>
-                                        <td>
+                                    <tr  *ngFor="let estudiante of estudiantes">
+                                        <td >
                                             <div class="d-flex align-items-center">
-                                                <div class="avatar me-2"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-1.png" /></div>
-                                                Tiger Nixon
+                                                {{ estudiante.student_name }}
                                             </div>
                                         </td>
-                                        <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a7d3cec0c2d5e7c2cac6cecb89c4c8ca">[email&#160;protected]</a></td>
-                                        <td>Administrator</td>
-                                        <td>
-                                            <span class="badge bg-green-soft text-green">Sales</span>
-                                            <span class="badge bg-blue-soft text-blue">Developers</span>
-                                            <span class="badge bg-red-soft text-red">Marketing</span>
-                                            <span class="badge bg-purple-soft text-purple">Managers</span>
-                                            <span class="badge bg-yellow-soft text-yellow">Customer</span>
+                                        <td class="text-center">
+                                            <a href="mailto:{{ estudiante.email }}">{{ estudiante.email }}</a>  <!-- Correo del estudiante -->
                                         </td>
-                                        <td>20 Jun 2021</td>
+                                        <td class="text-center">{{ estudiante.role }}</td>
                                         <td>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="user-management-edit-user.html"><i data-feather="edit"></i></a>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i data-feather="trash-2"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="avatar me-2"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-2.png" /></div>
-                                                Garrett Winters
-                                            </div>
-                                        </td>
-                                        <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="7d1a0a141309180f0e183d18101c1411531e1210">[email&#160;protected]</a></td>
-                                        <td>Administrator</td>
-                                        <td>
-                                            <span class="badge bg-green-soft text-green">Sales</span>
-                                            <span class="badge bg-blue-soft text-blue">Developers</span>
-                                            <span class="badge bg-red-soft text-red">Marketing</span>
-                                            <span class="badge bg-purple-soft text-purple">Managers</span>
-                                            <span class="badge bg-yellow-soft text-yellow">Customer</span>
-                                        </td>
-                                        <td>20 Jun 2021</td>
-                                        <td>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="user-management-edit-user.html"><i data-feather="edit"></i></a>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i data-feather="trash-2"></i></a>
+                                            <ng-container *ngFor="let grupo of getGruposArray(estudiante.groups)">
+                                                <span [ngClass]="getColorForGroup(grupo)">{{ grupo }}</span>
+                                              </ng-container>
+                                          </td>
+                                          <td>
+                                            <button class="btn btn-icon btn-transparent-dark me-2"
+                                                type="button" data-bs-toggle="modal" data-bs-target="#editGroupModal"><i
+                                                class="fa-solid fa-edit fa-sm"></i></button>
+                                            <a class="btn btn-icon btn-transparent-dark" href="/listaG"><i
+                                                class="fa-solid fa-trash fa-sm"></i></a>
                                         </td>
                                     </tr>
                                 </tbody>
