--- a/src/app/estudiante/dashboardestudiante/dashboardestudiante.component.html
+++ b/src/app/estudiante/dashboardestudiante/dashboardestudiante.component.html
@@ -125,7 +125,7 @@
             <!-- Sidenav Heading (Custom)-->
             <div class="sidenav-menu-heading">Grupos</div>
             <!-- Sidenav Accordion (Pages)-->
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" href="/gruposE">
               <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="feather feather-bar-chart">
@@ -165,7 +165,7 @@
             <!-- Sidenav Heading (UI Toolkit)-->
             <div class="sidenav-menu-heading">Proyectos</div>
             <!-- Sidenav Accordion (Layout)-->
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" href="/dashboardE">
               <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="feather feather-bar-chart">
@@ -183,7 +183,7 @@
               </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
             </a>
             <!-- Sidenav Link (Tables)-->
-            <a class="nav-link" href="tables.html">
+            <a class="nav-link" href="/dashboardE">
               <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="feather feather-filter">
@@ -200,7 +200,7 @@
             </a>
             <!-- Sidenav Heading (Addons)-->
             <div class="sidenav-menu-heading">Colaboración</div>            
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" href="/dashboardE">
               <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="feather feather-bar-chart">
@@ -218,7 +218,7 @@
               </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
             </a>
             <!-- Sidenav Link (Tables)-->
-            <a class="nav-link" href="tables.html">
+            <a class="nav-link" href="/dashboardE">
               <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="feather feather-filter">
