--- a/src/app/estudiante/estudiantegrupo/estudiantegrupo.component.html
+++ b/src/app/estudiante/estudiantegrupo/estudiantegrupo.component.html
@@ -128,7 +128,7 @@
                     <!-- Sidenav Heading (Custom)-->
                     <div class="sidenav-menu-heading">Grupos</div>
                     <!-- Sidenav Accordion (Pages)-->
-                    <a class="nav-link" href="charts.html">
+                    <a class="nav-link" href="/gruposE">
                         <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -168,7 +168,7 @@
                     <!-- Sidenav Heading (UI Toolkit)-->
                     <div class="sidenav-menu-heading">Proyectos</div>
                     <!-- Sidenav Accordion (Layout)-->
-                    <a class="nav-link" href="charts.html">
+                    <a class="nav-link" href="/dashboardE">
                         <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -186,7 +186,7 @@
                             </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
                     </a>
                     <!-- Sidenav Link (Tables)-->
-                    <a class="nav-link" href="tables.html">
+                    <a class="nav-link" href="/dashboardE">
                         <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-filter">
@@ -203,7 +203,7 @@
                     </a>
                     <!-- Sidenav Heading (Addons)-->
                     <div class="sidenav-menu-heading">Colaboración</div>
-                    <a class="nav-link" href="charts.html">
+                    <a class="nav-link" href="/dashboardE">
                         <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -221,7 +221,7 @@
                             </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
                     </a>
                     <!-- Sidenav Link (Tables)-->
-                    <a class="nav-link" href="tables.html">
+                    <a class="nav-link" href="/dashboardE">
                         <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-filter">
@@ -251,6 +251,20 @@
     <div id="layoutSidenav_content">
         <main>
             <!--Aqui va lo que tendra el cuerpo de la pagina-->
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                        <div class="col">
+                            <div class="card border-success mb-3" style="max-width: 18rem;">
+                                <div class="card-body text-success">
+                                  <h5 class="card-title text-center">Nombre Grupo</h5>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </div>
