--- a/src/app/estudiante/estudiantegrupo/estudiantegrupo.component.html
+++ b/src/app/estudiante/estudiantegrupo/estudiantegrupo.component.html
@@ -251,6 +251,8 @@
     <div id="layoutSidenav_content">
         <main>
             <!--Aqui va lo que tendra el cuerpo de la pagina-->
+            <h1>Cantidad de Grupos: </h1>
+            <!--Aqui va lo que tendra el cuerpo de la pagina-->
             <div class="album py-5 bg-body-tertiary">
                 <div class="container">
 
