--- a/src/app/estudiante/estudiantegrupo/estudiantegrupo.component.html
+++ b/src/app/estudiante/estudiantegrupo/estudiantegrupo.component.html
@@ -251,16 +251,17 @@
     <div id="layoutSidenav_content">
         <main>
             <!--Aqui va lo que tendra el cuerpo de la pagina-->
-            <h1>Cantidad de Grupos: </h1>
+            
             <!--Aqui va lo que tendra el cuerpo de la pagina-->
             <div class="album py-5 bg-body-tertiary">
+                <h1 class="text-center">Cantidad de Grupos: {{ numberOfGroups }}</h1>
+                &nbsp;
                 <div class="container">
-
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                        <div class="col">
+                        <div class="col" *ngFor="let grupo of grupos">
                             <div class="card border-success mb-3" style="max-width: 18rem;">
                                 <div class="card-body text-success">
-                                  <h5 class="card-title text-center">Nombre Grupo</h5>
+                                  <h5 class="card-title text-center">{{ grupo }}</h5>
                                 </div>
                               </div>
                         </div>
